	PR bootstrap/44509 	* c-config-lang.in (gtfiles): Add c-family/c-cppbuiltin.c. 	* c-family/c-cppbuiltin.c: Include gt-c-family-c-cppbuiltin.h. 	(lazy_hex_fp_values, lazy_hex_fp_value_count): Add GTY(()) markers. 	(lazy_hex_fp_value, builtin_define_with_hex_fp_value): Use 	ggc_strdup instead of xstrdup.

* gcc.dg/pr44509.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160729 138bc75d-0d04-0410-961f-82ee72b054a4